--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Esta línea enlaza el archivo CSS externo para aplicar estilos a la página. -->
   </head>
   <body>
-    <div class="container-lg">
+    <div id="pd-content" class="container-lg">
       <div class="row shadow-lg rounded-4 overflow-hidden">
         <!-- Columna de la izquierda -->
         <div class="col-md-4 bg-primary text-white p-4">
@@ -82,7 +82,8 @@
               </li>
             </ul>
           </section>
-          <hr><!-- Agrega una linea de division -->
+          <hr />
+          <!-- Agrega una linea de division -->
 
           <!-- Habilidades -->
           <section class="mb-2">
@@ -91,61 +92,140 @@
               Habilidades
             </h5>
             <div class="skill mb-2">
-                <div class="d-flex justify-content-between">
-                    <span >Trabajo en equipo</span>
-                    <span>98%</span>
-                </div>
-                <div class="progress" style="height: 10px;">
-                    <div
-                        class="progress-bar bg-success"
-                        role="progressbar"
-                        style="width: 98%"
-                        aria-valuenow="98"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                    ></div>
-                </div>                
+              <div class="d-flex justify-content-between">
+                <span>Trabajo en equipo</span>
+                <span>98%</span>
+              </div>
+              <div class="progress" style="height: 10px">
+                <div
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  style="width: 98%"
+                  aria-valuenow="98"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </div>
             <div class="skill mb-2">
-                <div class="d-flex justify-content-between">
-                    <span >Google Looker Studio</span>
-                    <span>90%</span>
-                </div>
-                <div class="progress" style="height: 10px;">
-                    <div
-                        class="progress-bar bg-success"
-                        role="progressbar"
-                        style="width: 90%"
-                        aria-valuenow="90"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                    ></div>
-                </div>                
+              <div class="d-flex justify-content-between">
+                <span>Google Looker Studio</span>
+                <span>90%</span>
+              </div>
+              <div class="progress" style="height: 10px">
+                <div
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  style="width: 90%"
+                  aria-valuenow="90"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </div>
             <div class="skill mb-2">
-                <div class="d-flex justify-content-between">
-                    <span >Google Analitycs</span>
-                    <span>90%</span>
-                </div>
-                <div class="progress" style="height: 10px;">
-                    <div
-                        class="progress-bar bg-success"
-                        role="progressbar"
-                        style="width: 90%"
-                        aria-valuenow="90"
-                        aria-valuemin="0"
-                        aria-valuemax="100"
-                    ></div>
-                </div>                
+              <div class="d-flex justify-content-between">
+                <span>Google Analitycs</span>
+                <span>90%</span>
+              </div>
+              <div class="progress" style="height: 10px">
+                <div
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  style="width: 90%"
+                  aria-valuenow="90"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
             </div>
-
-                
-
           </section>
         </div>
 
         <!--Columna derecha-->
+        <div class="col-md-8 bg-light text-white p-4">
+          <!-- Experiencia Laboral -->
+          <section class="mb-3">
+            <h4 class="fw-bold text-primary">
+              <i class="fas fa-briefcase me-2"></i>
+              Expercia laboral
+            </h4>
+            <div class="card mb-3">
+              <div class="card-body">
+                <h4 class="car-title">Consultor Analytics</h4>
+                <h4 class="card-subtitle mb-2 text-muted small">
+                  2022 - Actualidad
+                </h4>
+                <h6 class="text-primary">Consultor Analytics</h6>
+                <ul class="mt-3">
+                  <li>Analitica de Datos</li>
+                  <li>Desarrollo de soluciones analiticas</li>
+                  <li>Cración de dashboard en Looker Studio</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card mb-3">
+              <div class="card-body">
+                <h4 class="car-title">COORDINADOR DE OPERACIÓN</h4>
+                <h4 class="card-subtitle mb-2 text-muted small">
+                  2022 - Actualidad
+                </h4>
+                <h6 class="text-primary">Konecta</h6>
+                <ul class="mt-3">
+                  <li>Analitica de Datos</li>
+                  <li>Desarrollo de soluciones analiticas</li>
+                  <li>Cración de dashboard en Looker Studio</li>
+                </ul>
+              </div>
+            </div>
+          </section>
+
+          <!-- Educación -->
+          <section class="mb-3">
+            <h4 class="fw-bold text-primary">
+              <i class="fas fa-graduation-cap me-2"></i>
+              Educación
+            </h4>
+            <div class="card mb-3">
+              <div class="card-body">
+                <h4 class="car-title">INGENIERIA EN INFORMATICA</h4>
+                <h4 class="card-subtitle mb-2 text-muted small">
+                  Sexto Semestre
+                </h4>
+                <h6 class="text-primary">Universidad de Caldas</h6>
+                <ul class="mt-3">
+                  <li>Analitica de Datos</li>
+                  <li>Desarrollo de soluciones analiticas</li>
+                  <li>Cración de dashboard en Looker Studio</li>
+                </ul>
+              </div>
+            </div>
+            <div class="card mb-3">
+              <div class="card-body">
+                <h4 class="car-title">COORDINADOR DE OPERACIÓN</h4>
+                <h4 class="card-subtitle mb-2 text-muted small">
+                  2022 - Actualidad
+                </h4>
+                <h6 class="text-primary">Konecta</h6>
+                <ul class="mt-3">
+                  <li>Analitica de Datos</li>
+                  <li>Desarrollo de soluciones analiticas</li>
+                  <li>Cración de dashboard en Looker Studio</li>
+                </ul>
+              </div>
+            </div>
+          </section>
+        </div>
       </div>
     </div>
+
+    <div class="text-center my-3">
+      <button onclick="downloadPDF()" class="btn btn-primary">
+        <i class="fas fa-file-pdf me-2"></i>
+        Descargar PDF
+      </button>
+    </div>
+    <script src="https://unpkg.com/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
