--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img
               src="img/Foto.jpg"
               alt="Foto de perfil"
-              class="img-fluid rounded-circle border border-1 border-white mb-3"
+              class="imgRes img-fluid rounded-circle border border-1 border-white mb-3"
             />
             <h1 class="fw-bold mb-1">Eduar Stiven Jimenez Arias</h1>
             <h2 class="h5">Consultor Analytics</h2>
@@ -226,6 +226,6 @@
       </button>
     </div>
     <script src="https://unpkg.com/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
