--- a/index.html
+++ b/index.html
@@ -226,6 +226,6 @@
       </button>
     </div>
     <script src="https://unpkg.com/html2pdf.js@0.10.1/dist/html2pdf.bundle.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
