Actualizacion de informacion

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                   +57 3177137379
                 </a>
               </li>
-              <li class="mb-2 print">                                
-                    <i class="fas fa-envelope me-2"></i>
-                    eduar.jimenez45164@ucaldas.edu.co
+              <li class="mb-2 print">
+                <i class="fas fa-envelope me-2"></i>
+                eduar.jimenez45164@ucaldas.edu.co
               </li>
               <li class="mb-2">
                 <i class="fas fa-map-marker-alt me-2"></i>
@@ -68,16 +68,16 @@
               </li>
               <li class="mb-2">
                 <i class="fab fa-linkedin me-2"></i>
-                linkedin.com/julianbuitrago
+                linkedin.com/eduar-stiven-jimenez-arias
               </li>
               <li class="mb-2 print">
                 <a
-                  href="https://github.com/juliandavidbuitrago"
+                  href="https://github.com/esjim01"
                   target="_blank"
                   class="text-white"
                 >
                   <i class="fab fa-github me-2"></i>
-                  github.com/JulianDavidBuitrago
+                  github.com/esjim01
                 </a>
               </li>
             </ul>
@@ -102,6 +102,86 @@
                   role="progressbar"
                   style="width: 98%"
                   aria-valuenow="98"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+            </div>
+            <div class="skill mb-2">
+              <div class="d-flex justify-content-between">
+                <span>Pensamiento crítico y analítico</span>
+                <span>100%</span>
+              </div>
+              <div class="progress" style="height: 10px">
+                <div
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  style="width: 100%"
+                  aria-valuenow="100"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+            </div>
+            <div class="skill mb-2">
+              <div class="d-flex justify-content-between">
+                <span>Gestión efectiva del tiempo</span>
+                <span>100%</span>
+              </div>
+              <div class="progress" style="height: 10px">
+                <div
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  style="width: 100%"
+                  aria-valuenow="100"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+            </div>
+            <div class="skill mb-2">
+              <div class="d-flex justify-content-between">
+                <span>HTML/CSS</span>
+                <span>80%</span>
+              </div>
+              <div class="progress" style="height: 10px">
+                <div
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  style="width: 80%"
+                  aria-valuenow="80"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+            </div>
+            <div class="skill mb-2">
+              <div class="d-flex justify-content-between">
+                <span>Python</span>
+                <span>60%</span>
+              </div>
+              <div class="progress" style="height: 10px">
+                <div
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  style="width: 60%"
+                  aria-valuenow="80"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+            </div>
+            <div class="skill mb-2">
+              <div class="d-flex justify-content-between">
+                <span>Sql</span>
+                <span>75%</span>
+              </div>
+              <div class="progress" style="height: 10px">
+                <div
+                  class="progress-bar bg-success"
+                  role="progressbar"
+                  style="width: 75%"
+                  aria-valuenow="75"
                   aria-valuemin="0"
                   aria-valuemax="100"
                 ></div>
@@ -156,25 +236,28 @@
                 <h4 class="card-subtitle mb-2 text-muted small">
                   2022 - Actualidad
                 </h4>
-                <h6 class="text-primary">Consultor Analytics</h6>
+                <h6 class="text-primary">Konecta</h6>
                 <ul class="mt-3">
                   <li>Analitica de Datos</li>
-                  <li>Desarrollo de soluciones analiticas</li>
-                  <li>Cración de dashboard en Looker Studio</li>
+                  <li>Desarrollo de soluciones analíticas IA gen</li>
+                  <li>Estructuración de dashboard en Looker Studio</li>
+                  <li>Análisis Root case</li>
                 </ul>
               </div>
             </div>
             <div class="card mb-3">
               <div class="card-body">
-                <h4 class="car-title">COORDINADOR DE OPERACIÓN</h4>
-                <h4 class="card-subtitle mb-2 text-muted small">
-                  2022 - Actualidad
+                <h4 class="car-title">
+                  COORDINADOR DE OPERACIÓN CONTACT CENTER
                 </h4>
+                <h4 class="card-subtitle mb-2 text-muted small">2017 - 2022</h4>
                 <h6 class="text-primary">Konecta</h6>
                 <ul class="mt-3">
-                  <li>Analitica de Datos</li>
-                  <li>Desarrollo de soluciones analiticas</li>
-                  <li>Cración de dashboard en Looker Studio</li>
+                  <li>Liderazgo de equipos</li>
+                  <li>
+                    Gestión y seguimiento de equipos de trabajo, garantizando el logro de objetivos y metas definidas.
+                  </li>
+                  <li>Supervisión operativa integral, asegurando el cumplimiento de metas globales con altos estándares de calidad.</li>
                 </ul>
               </div>
             </div>
@@ -188,30 +271,32 @@
             </h4>
             <div class="card mb-3">
               <div class="card-body">
-                <h4 class="car-title">INGENIERIA EN INFORMATICA</h4>
+                <h4 class="car-title">INGENIERIA EN INFORMÁTICA</h4>
                 <h4 class="card-subtitle mb-2 text-muted small">
-                  Sexto Semestre
+                  Sexto Semestre - En curso
                 </h4>
-                <h6 class="text-primary">Universidad de Caldas</h6>
-                <ul class="mt-3">
-                  <li>Analitica de Datos</li>
-                  <li>Desarrollo de soluciones analiticas</li>
-                  <li>Cración de dashboard en Looker Studio</li>
-                </ul>
+                <h6 class="text-primary mb-3">Universidad de Caldas</h6>
+                <hr>
+                <h4 class="car-title">TECNICO EN SISTEMAS</h4>
+                <h4 class="card-subtitle mb-2 text-muted small">
+                  Certificado
+                </h4>
+                <h6 class="text-primary mb-3">SENA</h6>
               </div>
             </div>
+            <h4 class="fw-bold text-primary">
+              <i class="fas fa-award me-2"></i>
+              Cursos
+            </h4>
             <div class="card mb-3">
               <div class="card-body">
-                <h4 class="car-title">COORDINADOR DE OPERACIÓN</h4>
-                <h4 class="card-subtitle mb-2 text-muted small">
-                  2022 - Actualidad
-                </h4>
-                <h6 class="text-primary">Konecta</h6>
-                <ul class="mt-3">
-                  <li>Analitica de Datos</li>
-                  <li>Desarrollo de soluciones analiticas</li>
-                  <li>Cración de dashboard en Looker Studio</li>
-                </ul>
+                <h4 class="car-title">LEAN SIX SIGMA</h4>
+                <h4 class="card-subtitle mb-2 text-muted small">2024</h4>
+                <h6 class="text-primary mb-3">Udemy</h6>
+                <hr>
+                <h4 class="car-title">PROMPT ENGINEERING</h4>
+                <h4 class="card-subtitle mb-2 text-muted small">2024</h4>
+                <h6 class="text-primary">In Learning</h6>
               </div>
             </div>
           </section>
