--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="card mb-3">
               <div class="card-body">
                 <h4 class="car-title">
-                  COORDINADOR DE OPERACIÓN CONTACT CENTER
+                  Coordinador de operación contact center
                 </h4>
                 <h4 class="card-subtitle mb-2 text-muted small">2017 - 2022</h4>
                 <h6 class="text-primary">Konecta</h6>
